--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -1,1 +1,24 @@
+jobs:
+- job:
+  displayName: From environment.yml
+  pool:
+    vmImage: 'ubuntu-16.04'
 
+  steps:
+  - bash: echo "##vso[task.prependpath]$CONDA/bin"
+    displayName: Add conda to PATH
+
+  - script: conda env create --quiet --file environment.yml
+    displayName: Create Anaconda environment
+
+  - bash: |
+      source activate env-from-yaml
+      pip install pytest pytest-azurepipelines
+      pytest
+    displayName: pytest
+  
+  - task: PublishPipelineArtifact@1
+    displayName: 'Publish Pipeline Artifact'
+    inputs:
+      targetPath: '$(System.DefaultWorkingDirectory)'
+      artifact: 'build-output'
